--- a/pytorch_2_6_documentation/NOTAS.html
+++ b/pytorch_2_6_documentation/NOTAS.html
@@ -80,6 +80,44 @@
 </li>
 <li dir="auto"><strong>Training Recipes</strong>. Son sistemas completos descriptos en github.</li>
 <li dir="auto"><strong>Python API Reference</strong>. Contiene todas las funciones que necesitamos.</li>
+<li dir="auto"><strong>Python Prototype API Reference</strong>.</li>
+</ul>
+</li>
+</ul>
+<h2 dir="auto" id="augmenter-de-datos">Augmenter de datos</h2>
+<p dir="auto">En speechbrain:</p>
+<ul dir="auto">
+<li dir="auto">augmenter es una función que define como agregar los datos aumentados</li>
+<li dir="auto">freq_domain
+<ul dir="auto">
+<li dir="auto">randomshift</li>
+<li dir="auto">spectrogramdrop</li>
+<li dir="auto">warping</li>
+</ul>
+</li>
+<li dir="auto">preparation module
+<ul dir="auto">
+<li dir="auto">prepare csv</li>
+<li dir="auto">prepare datasete from url</li>
+<li dir="auto">write csv</li>
+</ul>
+</li>
+<li dir="auto">time domain
+<ul dir="auto">
+<li dir="auto">AddNoise</li>
+<li dir="auto">AddReverb</li>
+<li dir="auto">ChannelDrop</li>
+<li dir="auto">ChannelSwap</li>
+<li dir="auto">CutCat</li>
+<li dir="auto">DoClip</li>
+<li dir="auto">DropBitResolution</li>
+<li dir="auto">DropChunk</li>
+<li dir="auto">DropFreq</li>
+<li dir="auto">FastDropChunk</li>
+<li dir="auto">RandAmp</li>
+<li dir="auto">Resample</li>
+<li dir="auto">SignFlip</li>
+<li dir="auto">SpeedPerturb</li>
 </ul>
 </li>
 </ul>
